[gd_scene load_steps=3 format=3 uid="uid://bsphf0a50dht2"]

[ext_resource type="Script" path="res://FakeAI_main.gd" id="1_go8po"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nltbp"]
bg_color = Color(0, 0, 0, 1)

[node name="FakeAiMain" type="Node2D"]
script = ExtResource("1_go8po")

[node name="OutputLabel" type="RichTextLabel" parent="."]
offset_left = 126.0
offset_top = 42.0
offset_right = 476.0
offset_bottom = 205.0
theme_override_styles/normal = SubResource("StyleBoxFlat_nltbp")
scroll_following = true

[node name="InputText" type="LineEdit" parent="."]
offset_left = 128.0
offset_top = 219.0
offset_right = 472.0
offset_bottom = 250.0
placeholder_text = "type your text here"

[node name="username" type="LineEdit" parent="."]
offset_left = 15.0
offset_top = 219.0
offset_right = 117.0
offset_bottom = 250.0
placeholder_text = "Enter Name"

[connection signal="text_submitted" from="InputText" to="." method="_on_input_text_text_submitted"]
[connection signal="text_submitted" from="username" to="." method="_on_username_text_submitted"]
